# MLManticore

./: .gitignore  CMakeLists.txt  Common.cpp  Common.hpp  MLLib.hpp  MLManticore.hpp
Activations/: ActivationFunction.hpp  Activations.hpp
Activations/GeLU/: GeLU.cpp  GeLU.hpp
Activations/LeakyReLU/: LeakyReLU.cpp  LeakyReLU.hpp
Activations/ReLU/: ReLU.cpp  ReLU.hpp
Activations/Sigmoid/: Sigmoid.cpp  Sigmoid.hpp
Activations/SoftMax/: SoftMax.cpp  SoftMax.hpp
Activations/Tanh/: Tanh.cpp  Tanh.hpp
Include/GraphicsGorilla/: GraphicsGorilla.hpp
Kernels/: Kernels.hpp
Kernels/Activation_Derivatives/: Activation_Derivatives.hpp  GeLU_Derivative.cl  GeLU_Derivative.hpp  LeakyReLU_Derivative.cl  LeakyReLU_Derivative.hpp  ReLU_Derivative.cl  ReLU_Derivative.hpp  Sigmoid_Derivative.cl  Sigmoid_Derivative.hpp  SoftMax_Derivative.cl  SoftMax_Derivative.hpp  Tanh_Derivative.cl  Tanh_Derivative.hpp
Kernels/Activations/: Activations.hpp  GeLU.cl  GeLU.hpp  LeakyReLU.cl  LeakyReLU.hpp  ReLU.cl  ReLU.hpp  Sigmoid.cl  Sigmoid.hpp  SoftMax.cl  SoftMax.hpp  Tanh.cl  Tanh.hpp
Kernels/LayerTools/: CalcZs.cl  CalcZs.hpp  DCalcZs_dw.hpp  DCalcZs_dx.hpp  LayerTools.hpp
Kernels/Math/: Abs.cl  Abs.hpp  Abs_Derivative.cl  Abs_Derivative.hpp  Add.cl  Add.hpp  Add_Scalar.cl  Add_Scalar.hpp  Div.cl  Div.hpp  Div_Scalar.cl  Div_Scalar.hpp  Math.hpp  Mul.cl  Mul.hpp  Mul_Scalar.cl  Mul_Scalar.hpp  Sub.cl  Sub.hpp  Sub_Scalar.cl  Sub_Scalar.hpp
Layers/: Layers.hpp
Layers/NDLayers/: NDLayer.hpp
Layers/OneDLayers/: OneDLayer.hpp  OneDLayers.hpp
Layers/ThreeDLayers/: ThreeDLayer.hpp
Layers/TwoDLayers/: TwoDLayer.hpp
Losses/: LossFunction.hpp  Losses.hpp
Losses/CrossEntropy/: CrossEntropy.cpp  CrossEntropy.hpp
Losses/LogLoss/: LogLoss.cpp  LogLoss.hpp
Losses/MeanAbsoluteError/: MeanAbsoluteError.cpp  MeanAbsoluteError.hpp
Losses/MeanSquaredError/: MeanSquaredError.cpp  MeanSquaredError.hpp
Models/: Model.hpp  Models.hpp
Models/2DFullConvolutionLayer/: 2DFullConvolutionLayer.cpp  2DFullConvolutionLayer.hpp
Models/2DValidConvolutionLayer/: 2DValidConvolutionLayer.cpp  2DValidConvolutionLayer.hpp
Models/AutoEncoder/: AutoEncoder.cpp  AutoEncoder.hpp
Models/DeepNeuralNetwork/: DeepNeuralNetwork.cpp  DeepNeuralNetwork.hpp
Models/MambaLayer/: MambaLayer.cpp  MambaLayer.hpp
Models/MambaPerceptron/: MambaPerceptron.cpp  MambaPerceptron.hpp
Models/Perceptron/: Perceptron.cpp  Perceptron.hpp
Models/PerceptronLayer/: PerceptronLayer.cpp  PerceptronLayer.hpp
Models/RecurrentLayer/: RecurrentLayer.cpp  RecurrentLayer.hpp
Models/RecurrentPerceptron/: RecurrentPerceptron.cpp  (+1 more)
Perceptrons/: Perceptron.hpp  Perceptrons.hpp
Tensor/: Tensor.hpp
test/: test.cpp
(+87 files in other folders)
